--- a/package.json
+++ b/package.json
@@ -18,11 +18,13 @@
     "@react-navigation/stack": "^6.3.16",
     "expo": "~48.0.15",
     "expo-font": "~11.1.1",
+    "expo-location": "~15.1.1",
     "expo-status-bar": "~1.4.4",
     "firebase": "^9.22.0",
     "react": "18.2.0",
     "react-native": "0.71.7",
     "react-native-gesture-handler": "~2.9.0",
+    "react-native-maps": "1.3.2",
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
     "react-native-snap-carousel": "^3.9.1"
